# aviutl2-media-explorer-plus

./: .gitignore  CMakeLists.txt  README.md  build_and_copy.bat  release.md  仕様書.md
.github/workflows/: build.yml  release.yml
scripts/: build-package.ps1
src/: MediaExplorer.cpp  MediaExplorer.h  RightPane.cpp  SettingsDialog.cpp  TabsSubclass.cpp
src/sdk/: CMakeLists.txt  upload_release.bat
